<resources>
	<string name="app_name">RuuMusic</string>
	<string name="title_activity_preference">Preference</string>
	<string name="title_activity_sound_preference">Audio Effect Preference</string>
	<string name="title_activity_player_preference">Player Preference</string>
	<string name="title_activity_widget_preference">Widget Preference</string>
	<string name="title_activity_directory_select">Select music directory</string>

	<string name="unified_widget_name">RuuMusic</string>
	<string name="playpause_widget_name">RuuMusic | Play / Pause</string>
	<string name="skipnext_widget_name">RuuMusic | Skip next</string>
	<string name="skipprev_widget_name">RuuMusic | Skip prev</string>
	<string name="musicname_widget_name">RuuMusic | Music name</string>

	<string name="search_hint">Search music</string>
	<string name="search_description">Search music name</string>

	<string name="action_recursive_play">Play under here</string>
	<string name="menu_search">Search music</string>
	<string name="menu_search_play">Play search results</string>
	<string name="menu_preference">Preference</string>
	<string name="action_open_directory">Open</string>
	<string name="action_open_music">Play</string>
	<string name="action_open_search">Search</string>
	<string name="action_open_with_other_app">Open with other application</string>
	<string name="action_web_search">Web search</string>
	<string name="action_pin_shortcut">Add shortcut to home launcher</string>

	<string name="upper_dir">Back to %1$s</string>

	<string name="recursive">Playing under %1$s</string>
	<string name="search_play">Playing search result: %1$s</string>

	<string name="out_of_root">`%1$s` is out of root directory</string>
	<string name="cant_open_dir">Can\'t open directory `%1$s`</string>
	<string name="failed_open_music">Failed loading music</string>
	<string name="failed_play">Failed playing music `%1$s`</string>
	<string name="music_not_found">Music file not found</string>
	<string name="on_error_next_music">Play next</string>
	<string name="on_error_cancel">Cancel</string>
	<string name="first_of_directory">this is first</string>
	<string name="last_of_directory">this is last</string>
	<string name="has_not_music">`%1$s` has not music file</string>
	<string name="search_no_hits">`%1$s` was not found</string>
	<string name="audiofocus_denied">Failed to get audio focus</string>
	<string name="empty_device_title">Music not found</string>
	<string name="empty_device_message">Music not found in this device</string>
	<string name="empty_device_button">OK</string>
	<string name="empty_list">No such music or directory</string>
	<string name="permission_denied_title">Can\'t open music</string>
	<string name="permission_denied_message">Please grant permission request</string>
	<string name="permission_denied_close">CLOSE</string>
	<string name="permission_denied_ok">OK</string>

	<string name="preference_reset_button">RESET</string>

	<string name="bass_boost_switch">Bass boost</string>
	<string name="reverb_switch">Reverb</string>
	<string name="loudness_switch">Loudness enhancer</string>
	<string name="equalizer_switch">Equalizer</string>
	<string name="virtualizer_switch">Virtualizer</string>

	<string-array name="reverb_options">
		<item>Large Hall</item>
		<item>Medium Hall</item>
		<item>Large Room</item>
		<item>Medium Room</item>
		<item>Small Room</item>
	</string-array>

	<string-array name="virtualizer_modes">
		<item>Auto</item>
		<item>Headphones</item>
		<item>Speakers</item>
	</string-array>

	<string name="preference_list_sound_name">Audio Effect</string>
	<string name="preference_list_player_name">Player</string>
	<string name="preference_list_player_description">Change player\'s font size</string>
	<string name="preference_list_widget_name">Widget</string>
	<string name="preference_list_widget_description">Change widget\'s font size</string>
	<string name="preference_list_rootdir_name">Music Directory</string>

	<string name="player_auto_shrink">Auto resizing</string>
	<string name="player_music_path_size_label">Directory name size</string>
	<string name="player_music_path_size_sample">/path/to/music/</string>
	<string name="player_music_name_size_label">Music name size</string>
	<string name="player_music_name_size_sample">music name</string>

	<string name="unified_path_size_label">Normal widget: Directory name size</string>
	<string name="unified_path_size_sample">/path/to/music/</string>
	<string name="unified_name_size_label">Normal widget: Music name size</string>
	<string name="unified_name_size_sample">music name</string>
	<string name="musicname_name_size_label">Music name widget: Music name size</string>
	<string name="musicname_name_size_sample">music name</string>

	<string name="select_directory_button">SELECT</string>

	<string name="audioeffect_cant_enable">Audio effect can\'t enable. Maybe, other audio effect app is running.</string>
	<string name="audioeffect_failed_enable">Failed enable %s</string>

	<string name="widget_nodata">NO DATA</string>

	<string name="shortcut_open_player_short">Player</string>
	<string name="shortcut_open_player_long">Open player screen</string>
	<string name="shortcut_open_player_disable">Can\'t open now</string>
	<string name="shortcut_open_playlist_short">Playlist</string>
	<string name="shortcut_open_playlist_long">Open playlist screen</string>
	<string name="shortcut_open_playlist_disable">Can\'t open now</string>

	<string name="notification_channel_playing_status_name">Playing status</string>
	<string name="notification_channel_playing_status_description">Shows playing status and controls</string>
</resources>
