<?xml version="1.0" encoding="utf-8"?>

<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
	<shortcut
		android:shortcutId="open_player"
		android:enabled="true"
		android:icon="@drawable/ic_shortcut_player"
		android:shortcutShortLabel="@string/shortcut_open_player_short"
		android:shortcutLongLabel="@string/shortcut_open_player_long"
		android:shortcutDisabledMessage="@string/shortcut_open_player_disable">

		<intent
			android:action="jp.blanktar.ruumusic.OPEN_PLAYER"
			android:targetPackage="jp.blanktar.ruumusic"
			android:targetClass="jp.blanktar.ruumusic.client.main.MainActivity" />

		<categories android:name="android.shortcut.conversation" />
	</shortcut>

	<shortcut
		android:shortcutId="open_playlist"
		android:enabled="true"
		android:icon="@drawable/ic_shortcut_playlist"
		android:shortcutShortLabel="@string/shortcut_open_playlist_short"
		android:shortcutLongLabel="@string/shortcut_open_playlist_long"
		android:shortcutDisabledMessage="@string/shortcut_open_playlist_disable">

		<intent
			android:action="jp.blanktar.ruumusic.OPEN_PLAYLIST"
			android:targetPackage="jp.blanktar.ruumusic"
			android:targetClass="jp.blanktar.ruumusic.client.main.MainActivity" />

		<categories android:name="android.shortcut.conversation" />
	</shortcut>
</shortcuts>
