<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:app="http://schemas.android.com/apk/res-auto"
	  xmlns:tools="http://schemas.android.com/tools"
	  tools:context=".MainActivity">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />

	<item
		android:id="@+id/action_search_play"
		android:icon="@drawable/ic_play_all"
		android:title="@string/menu_search_play"
		app:showAsAction="ifRoom"/>

	<item android:id="@+id/action_recursive_play"
		  android:icon="@drawable/ic_play_all"
		  android:title="@string/action_recursive_play"
		  app:showAsAction="ifRoom"/>

	<item
		android:id="@+id/action_preference"
		android:icon="@drawable/ic_preference"
		android:title="@string/menu_preference"
		app:showAsAction="ifRoom"/>
</menu>