<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".client.preference.PlayerPreferenceActivity">

	<android.support.v7.widget.Toolbar
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="?attr/colorPrimary"
		android:minHeight="?attr/actionBarSize"
		android:theme="?attr/actionBarTheme"
		app:elevation="@dimen/elevation_toolbar" />

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin"
		android:clipToPadding="false"
		android:scrollbarStyle="outsideOverlay">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical"
			android:divider="@drawable/preference_divider"
			android:showDividers="middle">

			<android.support.v7.widget.SwitchCompat
				android:id="@+id/player_auto_shrink_switch"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingBottom="@dimen/preference_margin"
				android:textSize="@dimen/preference_text_size"
				android:text="@string/player_auto_shrink" />

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingTop="@dimen/preference_margin"
				android:paddingBottom="@dimen/preference_margin"
				android:orientation="vertical">

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textSize="@dimen/preference_text_size"
					android:text="@string/player_music_path_size_label" />

				<SeekBar
					android:id="@+id/music_path_size_seekbar"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:max="60" />

				<TextView
					android:id="@+id/music_path_size_sample"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/player_music_path_size_sample"
					android:gravity="center" />
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingTop="@dimen/preference_margin"
				android:orientation="vertical">

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textSize="@dimen/preference_text_size"
					android:text="@string/player_music_name_size_label" />

				<SeekBar
					android:id="@+id/music_name_size_seekbar"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:max="60" />

				<TextView
					android:id="@+id/music_name_size_sample"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/player_music_name_size_sample"
					android:gravity="center" />
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="right">

				<Button
					android:id="@+id/reset"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/preference_reset_button" />
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>
