<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".client.preference.SoundPreferenceActivity">

	<androidx.appcompat.widget.Toolbar
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="?attr/colorPrimary"
		android:minHeight="?attr/actionBarSize"
		android:theme="?attr/actionBarTheme"
		android:elevation="@dimen/elevation_toolbar" />

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin"
		android:clipToPadding="false"
		android:scrollbarStyle="outsideOverlay">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical"
			android:divider="@drawable/preference_divider"
			android:showDividers="middle">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:paddingBottom="@dimen/preference_margin">

				<androidx.appcompat.widget.SwitchCompat
					android:id="@+id/bass_boost_switch"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="5dp"
					android:text="@string/bass_boost_switch"
					android:textSize="@dimen/preference_text_size" />

				<SeekBar
					android:id="@+id/bass_boost_level"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_gravity="right"
					android:max="1000" />
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:paddingBottom="@dimen/preference_margin"
				android:paddingTop="@dimen/preference_margin">

				<androidx.appcompat.widget.SwitchCompat
					android:id="@+id/reverb_switch"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="5dp"
					android:text="@string/reverb_switch"
					android:textSize="@dimen/preference_text_size" />

				<Spinner
					android:id="@+id/reverb_spinner"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_gravity="right" />
			</LinearLayout>

			<LinearLayout
				android:id="@+id/loudness_wrapper"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:paddingBottom="@dimen/preference_margin"
				android:paddingTop="@dimen/preference_margin">

				<androidx.appcompat.widget.SwitchCompat
					android:id="@+id/loudness_switch"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="5dp"
					android:text="@string/loudness_switch"
					android:textSize="@dimen/preference_text_size" />

				<SeekBar
					android:id="@+id/loudness_level"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_gravity="right"
					android:max="5000" />
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:paddingBottom="@dimen/preference_margin"
				android:paddingTop="@dimen/preference_margin">

				<androidx.appcompat.widget.SwitchCompat
					android:id="@+id/virtualizer_switch"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="5dp"
					android:text="@string/virtualizer_switch"
					android:textSize="@dimen/preference_text_size" />

				<Spinner
					android:id="@+id/virtualizer_mode"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_gravity="right"
					android:layout_marginBottom="15dp" />

				<SeekBar
					android:id="@+id/virtualizer_strength"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_gravity="right"
					android:max="1000" />
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:paddingTop="@dimen/preference_margin">

				<androidx.appcompat.widget.SwitchCompat
					android:id="@+id/equalizer_switch"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="5dp"
					android:text="@string/equalizer_switch"
					android:textSize="@dimen/preference_text_size" />

				<Spinner
					android:id="@+id/equalizer_spinner"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_gravity="right"
					android:layout_marginBottom="15dp" />

				<TableLayout
					android:id="@+id/equalizer_container"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_gravity="right"
					android:stretchColumns="1" />

				<ProgressBar
					android:id="@+id/equalizer_progress"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center" />
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>
